Unify how JVM options are set for cross build performance tests